--- a/_posts/penyalur-kebaikan/penyalur-kebaikan.Rmd
+++ b/_posts/penyalur-kebaikan/penyalur-kebaikan.Rmd
@@ -59,7 +59,7 @@ Kita semua memiliki jatah waktu terbatas seperti jam pasir. Apakah kita ikut men
 
 
 <!-- AddToAny BEGIN -->
-<div class="a2a_kit a2a_kit_size_16 a2a_floating_style a2a_vertical_style" style="right:0px">
+<div class="a2a_kit a2a_kit_size_16 a2a_floating_style a2a_vertical_style" style="right:0px; top:150px; data-a2a-url="https://bangtedy.github.io/" data-a2a-title="Penyalur Kebaikan">
 <a class="a2a_button_whatsapp"></a>
 <a class="a2a_button_telegram"></a>
 </div>
