--- a/about.Rmd
+++ b/about.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Melihat yang ada..,"
+title: "Melihat yang ada.."
 description: |
-  ..bukan hanya yang dicari. Mengingat yang biasa, yang tak kerap tersua. 
+  ..bukan hanya yang dicari. Mengingat yang biasa, yang tak kerap terjumpa 
 ---
 
 ```{r setup, include=FALSE}
