--- a/_posts/penyalur-kebaikan/penyalur-kebaikan.Rmd
+++ b/_posts/penyalur-kebaikan/penyalur-kebaikan.Rmd
@@ -62,6 +62,8 @@ Kita semua memiliki jatah waktu terbatas seperti jam pasir. Apakah kita ikut men
 <div class="a2a_kit a2a_kit_size_16 a2a_default_style"; data-a2a-url="https://bangtedy.github.io/" data-a2a-title="Penyalur Kebaikan">
 <a class="a2a_button_whatsapp"></a>
 <a class="a2a_button_telegram"></a>
+<a class="a2a_button_facebook"></a>
+<a class="a2a_button_twitter"></a>
 </div>
 <script async src="https://static.addtoany.com/menu/page.js"></script>
 <!-- AddToAny END -->
