--- a/about.Rmd
+++ b/about.Rmd
@@ -8,11 +8,10 @@ description: |
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-*kerap*
+<body>
+  <p style="color:rgba(255,0,0,0.5);">kerap</p>
+</body>
 
-### adverbia
-
-- (KE)KERAP(AN) acap, acap-acap, acap kali, berkali-kali, kerap, kerap kali, sering, sering kali 
 
 ### adjektiva 
 
@@ -21,21 +20,6 @@ knitr::opts_chunk$set(echo = FALSE)
 - (KE)KERAP(AN) ajek, konstan, kronis, terus-menerus 
 - (KE)KERAP(AN) biasa, lazim; ritual, tradisional 
 - (KE)KERAP(AN) berkala, periodik; reguler 
-
-### adverbia 
-- (KE)KERAP(AN) selalu, senantiasa, terus-menerus, tunak 
-
-### nomina 
-- (KE)KERAP(AN) frekuensi, kekerapan, keseringan 
-- (KE)KERAP(AN) iterasi, pengulangan, perturutan, perulangan, repetisi 
-- (KE)KERAP(AN) daur, interval, jangka, periode, periodisasi, ritme, siklus 
-- (KE)KERAP(AN) adat, cara, kebiasaan, tradisi 
-- (KE)KERAP(AN) satuan: kali, persen 
-
-### verba
-
-- (KE)KERAP(AN) mengulangi; berturut-turut, berulang kali, berulang-ulang, beruntun, mengacapkan, mengerapkan, menyeringkan 
-- (KE)KERAP(AN) memperkerap, mempersering
 
 Sumber: [tesaurus kemdikbud](http://tesaurus.kemdikbud.go.id/tematis/lema/kerap)
 
