--- a/books.Rmd
+++ b/books.Rmd
@@ -10,5 +10,9 @@ knitr::opts_chunk$set(echo = FALSE)
 
 Saya menulis beberapa buku berikut:
 
-- Analisis Regresi dengan Menggunakan R&nbsp; [<a href="https://bangtedy.github.io/analisisregresi/"><i class="fas fa-book"></i></a>]
-- Analisis Faktor dengan Menggunakan R&nbsp; [<a href="https://bangtedy.github.io/analisisfaktor/"><i class="fas fa-book"></i></a>]
+- Analisis Regresi dengan Menggunakan R&nbsp; [<a href="https://bangtedy.github.io/analisisregresi/"><i class="fas fa-book" style="color:blue"></i></a>]
+- Analisis Faktor dengan Menggunakan R&nbsp; [<a href="https://bangtedy.github.io/analisisfaktor/"><i class="fas fa-book" style="color:blue"></i></a>]
+
+<div class="fa-1x">
+  <i class="fas fa-cog fa-spin"></i>
+</div>
