--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -8,7 +8,7 @@ description: |
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-Saya dosen/tutor beberapa mata kuliah berikut:
+Saya dosen beberapa mata kuliah berikut:
 
 - PAGR2105: Mikroekonomi&nbsp; [<a href="https://bangtedy.github.io/mikroekonomi/"><i class="fas fa-globe" style="color:blue"></i></a>]
 - PAGR2213: Makroekonomi
@@ -18,11 +18,8 @@ Saya dosen/tutor beberapa mata kuliah berikut:
 - PAGR2531: Analisis Investasi
 - PAGR2427: Manajemen Keuangan&nbsp; [<a href="https://bangtedy.github.io/menkeu/"><i class="fas fa-globe" style="color:blue"></i></a>]
 - EKSI4203: Teori Portofolio dan Analisis Investasi&nbsp; [<a href="https://bangtedy.github.io/porto/"><i class="fas fa-globe" style="color:blue"></i></a>]
-- EKMA4215: Manajemen Operasi&nbsp; [<a href="https://bangtedy.github.io/mop/"><i class="fas fa-globe" style="color:blue"></i></a>]
-- EKMA4434: Sistem Informasi Manajemen&nbsp; [<a href="https://bangtedy.github.io/sim/"><i class="fas fa-globe" style="color:blue"></i></a>]
 - ESPA4415: Ekonomi Pertanian&nbsp; [<a href="https://bangtedy.github.io/etan/"><i class="fas fa-globe" style="color:blue"></i></a>]
 - PA1431: Wawasan Agribisnis&nbsp; [<a href="https://bangtedy.github.io/wabis/"><i class="fas fa-globe" style="color:blue"></i></a>]
-- PAGR2637: Kepemimpinan Agribisnis&nbsp; [<a href="https://bangtedy.github.io/pimagri/"><i class="fas fa-globe" style="color:blue"></i></a>]
 
 <div class="fa-1x">
   <i class="fas fa-cog fa-spin"></i>
