--- a/posts/parfum-mawar/index.qmd
+++ b/posts/parfum-mawar/index.qmd
@@ -24,4 +24,8 @@ Bagaimana jika variabel penyebab dan konsekuensinya adalah target bergerak yang 
 
 Konon dari semua bunga, mawar adalah yang paling dicintai secara universal terutama karena wanginya, tampilan yang cantik dan warna menawan. Konon pula, ada seorang raja yang memenuhi kanal-kanal tamannya dengan air mawar. Ketika salah satu putri sedang keluar mendayung, dia melihat sampah aneh di permukaan kanal yang ketika disaring ternyata merupakan parfum baru yang menakjubkan. Sampah tersebut disebabkan oleh panas matahari yang memisahkan air dari minyak esensial mawar.
 
+[![](ivan-jevtic-p7mo8-CG5Gs-unsplash.jpg)](https://unsplash.com/photos/shallow-focus-photography-of-red-rose-p7mo8-CG5Gs)
+
+Sumber: [Ivan Jevtic di Unsplash](https://unsplash.com/photos/shallow-focus-photography-of-red-rose-p7mo8-CG5Gs)
+
 Pada saat bau busuk menyebar ke masyarakat, diperlukan awan asap yang berbau harum untuk menutupinya. Ketika aroma udara sangat buruk para pembesar membawa sapu tangan dan wangi-wangian untuk menyamarkan bau tersebut. Korupsi, kolusi dan penyalahgunaan kekuasaan telah memicu ketidakpuasan masyarakat. Bagaimanakah cara memisahkan minyak esensial mawar dari air kanal?
