update pic sources

--- a/posts/fatal-scent/index.qmd
+++ b/posts/fatal-scent/index.qmd
@@ -18,4 +18,4 @@ Namun, seperti halnya parfum, aroma pertumbuhan bisa harum ataupun menusuk. Ia b
 
 Dan seperti diingatkan Rumi, “Keindahan yang sejati bukanlah apa yang terlihat oleh mata, melainkan aroma kebenaran yang dirasakan oleh jiwa.”
 
-Images from [Ruslan Zh](https://unsplash.com/@chupzzz) on [Unsplash](https://unsplash.com/), and [openclipart](https://openclipart.org/)
+Images from [Ruslan Zh](https://unsplash.com/@chupzzz) and [openclipart](https://openclipart.org/)
