--- a/posts/para-peracik/index.qmd
+++ b/posts/para-peracik/index.qmd
@@ -20,4 +20,4 @@ Di sinilah kontras itu tampak jelas. Para perfumer sejati tahu bahwa setiap wang
 
 Maka “resep” pembangunan seharusnya bukan serangkaian perintah kaku yang sama bagi semua, melainkan sebuah komposisi yang peka pada keragaman, yang menghormati keseimbangan antara efisiensi dan keadilan, antara pertumbuhan dan keberlanjutan. Seperti parfum yang memikat karena perpaduan halus dari unsur yang berbeda, pembangunan sejati lahir dari sintesis kreatif: menggabungkan pasar dan negara, tradisi dan inovasi, lokalitas dan globalitas. Inilah alkimia yang sesungguhnya—bukan pengendalian demi kuasa, melainkan transformasi yang mengangkat martabat manusia.
 
-Images from [Laura Chouette](https://unsplash.com/@laurachouette?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash) on [Unsplash](https://unsplash.com/), and [openclipart](https://openclipart.org/)
+Images from [Laura Chouette](https://unsplash.com/@laurachouette?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash) and [openclipart](https://openclipart.org/)
