--- a/posts/piramida-parfum/index.qmd
+++ b/posts/piramida-parfum/index.qmd
@@ -16,9 +16,7 @@ Hanya *base notes* yang mampu memberi daya tahan jangka panjang. Fondasi itu ber
 
 Namun, membangun fondasi seringkali sulit karena manusia, terutama politisi, berpandangan *myopic*. Siklus elektoral mendorong mereka memilih kebijakan populis jangka pendek—subsidi, stimulus konsumsi, atau proyek spektakuler—demi keuntungan politik instan. Ibn Khaldun sudah mengingatkan dalam al-Muqaddimah:
 
-"الظلم مؤذن بخراب العمران"
-*al-ẓulmu mu’adhdhin bi-kharāb al-‘umrān*
-“Kezaliman (ketidakadilan dan salah kelola) adalah pertanda runtuhnya peradaban.”
+"الظلم مؤذن بخراب العمران" *al-ẓulmu mu’adhdhin bi-kharāb al-‘umrān* “Kezaliman (ketidakadilan dan salah kelola) adalah pertanda runtuhnya peradaban.”
 
 Myopia politik inilah bentuk “kezaliman struktural”: mengorbankan fondasi jangka panjang demi popularitas sesaat.
 
@@ -26,4 +24,4 @@ Untuk menyeimbangkannya, diperlukan mekanisme kelembagaan yang memaksa orientasi
 
 Dengan demikian, pembangunan yang berkelanjutan harus disusun dari bawah ke atas, seperti piramida parfum: dimulai dari fondasi struktural—*resources, human capital, institutions*—baru kemudian ditopang oleh lapisan pertumbuhan menengah dan hasil jangka pendek. Hanya dengan cara itu, pertumbuhan dapat menjadi bukan sekadar angka yang berkilau sesaat, melainkan aroma yang menetap lama, berakar kuat, dan meninggalkan jejak bagi generasi mendatang.
 
-Images from [Fulvio Ciccolo](https://unsplash.com/@scentspiracy) on [Unsplash](https://unsplash.com/), and [openclipart](https://openclipart.org/)
+Images from [Fulvio Ciccolo](https://unsplash.com/@scentspiracy) and [openclipart](https://openclipart.org/)
