--- a/posts/tumpeng/index.qmd
+++ b/posts/tumpeng/index.qmd
@@ -14,4 +14,4 @@ Nasi Tumpeng—nasi kuning berbentuk kerucut yang dikelilingi lauk-pauk—bukan 
 
 Setiap lauk-pauk menggambarkan kondisi kausal; identitas tumpeng lahir dari konfigurasi utuh, bukan dari satu elemen. Begitu pula pembangunan: harmoni muncul dari susunan faktor—pertumbuhan, keadilan, keberlanjutan—bukan dari kekuatan terpisah. Negara yang terlalu bergantung pada sumber daya alam ibarat tumpeng dengan telur berlimpah: kaya, tetapi timpang dan rapuh, sebagaimana kutukan sumber daya atau *Dutch Disease*.
 
-Images from [Backpacker Jakarta](https://backpackerjakarta.com/keunikan-kelezatan-dan-sejarah-nasi-tumpeng/), and [openclipart](https://openclipart.org/)
+Images from [Backpacker Jakarta](https://backpackerjakarta.com/keunikan-kelezatan-dan-sejarah-nasi-tumpeng/) and [openclipart](https://openclipart.org/)
