--- a/posts/parfum-mawar/index.qmd
+++ b/posts/parfum-mawar/index.qmd
@@ -3,7 +3,7 @@ title: "Parfum Mawar"
 author: "Tedy Herlambang"
 date: "2023-11-08"
 categories: [korupsi, ilmu ekonomi]
-image: "ivan-jevtic-p7mo8-CG5Gs-unsplash.jpg"
+image: "nikola-K5_Uz9uAINk-unsplash.jpg"
 ---
 
 John Maynard Keynes, sang ekonom besar dari Inggris, pernah mengaku bahwa pesona ilmu ekonomi terletak pada “*perpaduan antara ketelitian intelektual dan potensinya untuk kebaikan*.” Dalam ungkapan itu seakan tergambar bahwa ilmu, bila diarahkan dengan jernih, dapat menjadi cahaya bagi kehidupan bersama.
@@ -14,4 +14,4 @@ Dari sekian banyak bunga, mawar konon adalah yang paling dicintai. Keanggunannya
 
 Namun dunia tidak hanya mengenal wangi. Ketidakadilan yang merajalela dan korupsi yang tersembunyi menyebarkan bau busuk yang menyesakkan. Para penguasa menutupinya dengan sapu tangan dan wewangian, berusaha menipu hidung, tapi tak mampu menipu hati. Pertanyaan pun bergema: adakah cahaya yang cukup murni, seterang matahari, yang sanggup memisahkan busuk dari bening, sebagaimana mawar menyerahkan sari rahasianya?
 
-Images from [Ivan Jevtic](https://unsplash.com/photos/shallow-focus-photography-of-red-rose-p7mo8-CG5Gs) on [Unsplash](https://unsplash.com/), and [openclipart](https://openclipart.org/)
+Images from [Nikola](https://unsplash.com/@nikkihannah1) and [openclipart](https://openclipart.org/)
