add tropic from openclipart

--- a/posts/menemukan-bentuk-langit/index.qmd
+++ b/posts/menemukan-bentuk-langit/index.qmd
@@ -8,12 +8,14 @@ image: "simon-spring-BJ-FvNGCfEY-unsplash.jpg"
 
 Pembangunan seyogyanya berhenti menjadi sekadar lomba menyalin jejak Barat, tetapi sebuah laku kesabaran: merawat apa yang ada di dekat tangan, menyuburkan apa yang tertanam di tanah sendiri, dan menumbuhkan apa yang seirama dengan denyut tempat. Karena kemajuan bukan mengejar cakrawala orang lain; melainkan menemukan bentuk dari langit kita sendiri.
 
-Dalam bahasa ilmu ekonomi modern, perbedaan dapat digambarkan demikian: pemikiran neoklasik, memandang pembangunan sebagai persoalan mengoptimalkan suatu fungsi produksi yang bertumpu pada seperangkat teknologi yang dianggap universal dan tak berubah. Dalam kerangka ini, bangsa-bangsa hanya berbeda dalam derajat—ada yang lebih maju, ada yang tertinggal—namun tidak berbeda dalam hakikat.
+<img src="https://openclipart.org/download/203423/praia-2.svg" alt="tropical" style="max-width:15%;min-width:40px;float:right;"/>
 
-Pandangan lain misalnya (*New Structural Economics*): tidak berangkat dari abstraksi, melainkan dari tanah tempat sebuah bangsa berpijak - dari struktur endowmen yang dimiliki, dari industri yang mungkin tumbuh, dan dari dinamika teknologi yang senantiasa berubah. Dalam pandangan ini, perbedaan antara negara berkembang dan negara maju bukan hanya kuantitatif, melainkan juga kualitatif—bagai dua lanskap yang dibentuk bukan sekadar oleh jarak, melainkan oleh tanah, iklim, dan sejarah yang berbeda.
+Dalam bahasa ilmu ekonomi modern, perbedaan ini dapat digambarkan demikian: pemikiran neoklasik, memandang pembangunan sebagai persoalan mengoptimalkan suatu fungsi produksi yang bertumpu pada seperangkat teknologi yang dianggap universal dan tak berubah. Dalam kerangka ini, bangsa-bangsa hanya berbeda dalam derajat—ada yang lebih maju, ada yang tertinggal—namun tidak berbeda dalam hakikat.
 
-Selama puluhan tahun, teori ekonomi arus utama mengukur Asia Tenggara dengan patokan yang jauh—menunjuk apa yang kurang dalam institusi, teknologi, maupun modalnya. Namun perbandingan semacam itu kerap menutupi fondasi yang justru menjadi kekuatan kawasan ini: demografi yang muda, kekayaan sumber daya, posisi geografis yang strategis, serta sejarah panjang ketangguhan dan daya beradaptasi.
+Pandangan lain misalnya *New Structural Economics*: tidak berangkat dari abstraksi, melainkan dari tanah tempat sebuah bangsa berpijak - dari struktur endowmen yang dimiliki, dari industri yang mungkin tumbuh, dan dari dinamika teknologi yang senantiasa berubah. Dalam pandangan ini, perbedaan antara negara berkembang dan negara maju bukan hanya kuantitatif, melainkan juga kualitatif—bagai dua lanskap yang dibentuk bukan sekadar oleh jarak, melainkan oleh tanah, iklim, dan sejarah yang berbeda.
 
-Kita juga bisa memandang negara-negara ASEAN bukan sebagai bayangan Barat, melainkan sebagai medan dengan coraknya sendiri. Negara-negara di dalamnya, dengan endowmen yang beragam, dapat menumbuhkan industri sesuai dengan keunggulan komparatifnya—dari dinamika manufaktur Vietnam, transformasi berbasis sumber daya di Indonesia, pusat inovasi di Singapura, hingga kekuatan agro-industri Thailand. Dengan pemerintah yang berperan sebagai pengarah tanpa membelenggu, serta dunia usaha yang berakar pada kapasitas lokal, ASEAN dapat menempuh jalan yang bukan sekadar meniru, melainkan menyingkap kemungkinan-kemungkinan yang unik.
+Selama puluhan tahun, dengan menggunakan teori ekonomi arus utama Asia Tenggara dilihat dengan patokan yang jauh—menunjuk apa yang kurang dalam institusi, teknologi, maupun modalnya. Namun perbandingan semacam itu kerap menutupi fondasi yang justru menjadi kekuatan kawasan ini: demografi yang muda, kekayaan sumber daya, posisi geografis yang strategis, serta sejarah panjang ketangguhan dan daya beradaptasi.
 
-Images from [Simon Spring](https://unsplash.com/@springsimon)
+Kita seharusnya bisa memandang negara-negara ASEAN bukan sebagai bayangan Barat, melainkan sebagai medan dengan coraknya sendiri. Negara-negara di dalamnya, dengan endowmen yang beragam, dapat menumbuhkan industri sesuai dengan keunggulan komparatifnya—dari dinamika manufaktur Vietnam, transformasi berbasis sumber daya di Indonesia, pusat inovasi di Singapura, hingga kekuatan agro-industri Thailand. Dengan pemerintah yang berperan sebagai pengarah tanpa membelenggu, serta dunia usaha yang berakar pada kapasitas lokal, ASEAN dapat menempuh jalan yang bukan sekadar meniru, melainkan menyingkap kemungkinan-kemungkinan yang unik.
+
+Images from [Simon Spring](https://unsplash.com/@springsimon) and [openclipart](https://openclipart.org/detail/203423/praia-2).
