--- a/posts/wangi imitasi atau sintesis/index.qmd
+++ b/posts/wangi imitasi atau sintesis/index.qmd
@@ -6,20 +6,17 @@ categories: [post-industrial society, pasca industri]
 image: "aseanflags.jpg"
 ---
 
-Sebuah parfum tak pernah lahir dari satu nada saja.
-Ada nada atas, nada tengah, dan nada dasar — masing-masing dengan waktunya sendiri: yang cepat menguap, yang menenangkan di tengah, yang bertahan lama di dasar. Demikian pula perjalanan ekonomi ASEAN.
+Sebuah parfum tak pernah lahir dari satu nada saja. Ada nada atas, nada tengah, dan nada dasar — masing-masing dengan waktunya sendiri: yang cepat menguap, yang menenangkan di tengah, yang bertahan lama di dasar. Demikian pula perjalanan ekonomi ASEAN.
 
 Singapura telah melayang ke nada atas pasca-industri: finansial, teknologi, pengetahuan, dan jejaring — ringan namun tajam, ibarat jeruk segar atau aroma ozon. Ia tak punya tanah luas untuk berakar, maka hidupnya bergantung pada wangi yang melayang.
 
 Malaysia dan Thailand sedang meracik campuran: parfum mereka masih kokoh di nada kayu manufaktur, tetapi mulai merangkai bunga riset, desain, dan inovasi hijau. Tantangan mereka adalah harmoni — menyatukan baja dengan silikon, perakitan dengan imajinasi.
 
-Indonesia, Vietnam, dan Filipina — botolnya masih dalam proses pengadukan.
-Nada dasar dari sumber daya alam dan industri padat karya memberi kedalaman, tetapi di permukaan mulai muncul lapisan baru: platform digital, ekonomi kreatif, generasi muda yang mencipta wangi masa depan. Parfum mereka belum menetap; ia berubah-ubah dengan angin, rapuh sekaligus menjanjikan.
+Indonesia, Vietnam, dan Filipina — botolnya masih dalam proses pengadukan. Nada dasar dari sumber daya alam dan industri padat karya memberi kedalaman, tetapi di permukaan mulai muncul lapisan baru: platform digital, ekonomi kreatif, generasi muda yang mencipta wangi masa depan. Parfum mereka belum menetap; ia berubah-ubah dengan angin, rapuh sekaligus menjanjikan.
 
 Kamboja, Laos, dan Myanmar — masih berupa distilasi mentah dari sawah dan tangan, aroma bumi yang mendasar. Parfum mereka perlu diperkuat dahulu, minyaknya dimatangkan, sebelum nada atas pasca-industri bisa benar-benar ditambahkan.
 
-Maka jelas: tidak semua ekonomi ASEAN harus mengejar wangi pasca-industri yang sama.
-Parfum yang kehilangan nada dasar takkan bertahan; yang tanpa nada tengah akan hampa; yang hanya mengandalkan nada atas akan segera lenyap. Seni sejatinya ada pada percampuran: membiarkan geografi, manusia, dan institusi tiap bangsa meramu formula yang tahan lama.
+Maka jelas: tidak semua ekonomi ASEAN harus mengejar wangi pasca-industri yang sama. Parfum yang kehilangan nada dasar takkan bertahan; yang tanpa nada tengah akan hampa; yang hanya mengandalkan nada atas akan segera lenyap. Seni sejatinya ada pada percampuran: membiarkan geografi, manusia, dan institusi tiap bangsa meramu formula yang tahan lama.
 
 Pembangunan, dengan demikian, bukanlah sekadar menjadi pasca-industri, melainkan meracik wangi yang setia pada nada sendiri — entah tanah atau udara, industri atau informasi. Bahayanya adalah meniru; kekuatannya adalah menyintesis.
 
@@ -27,21 +24,17 @@ Dan pada akhirnya, parfum kawasan ini akan paling berdaya bukan ketika serupa de
 
 <img src="https://openclipart.org/download/309190/1540766266.svg" alt="Industry" style="max-width:15%;min-width:40px;float:right;"/>
 
-----
+------------------------------------------------------------------------
 
-ASEAN is not a single body but an archipelago of journeys.
-Some of its cities gleam with glass towers, where algorithms hum louder than factory machines; there, knowledge is currency and finance flows faster than rivers. Singapore already speaks the tongue of the post-industrial age, a language of services, ideas, and networks.
+ASEAN is not a single body but an archipelago of journeys. Some of its cities gleam with glass towers, where algorithms hum louder than factory machines; there, knowledge is currency and finance flows faster than rivers. Singapore already speaks the tongue of the post-industrial age, a language of services, ideas, and networks.
 
-Elsewhere, the music is different.
-Malaysia and Thailand still beat to the rhythm of engines and assembly lines, yet they begin to weave new melodies of research parks, green industries, and digital ambitions. Their path is neither fully industrial nor post-industrial, but a liminal dance between steel and silicon.
+Elsewhere, the music is different. Malaysia and Thailand still beat to the rhythm of engines and assembly lines, yet they begin to weave new melodies of research parks, green industries, and digital ambitions. Their path is neither fully industrial nor post-industrial, but a liminal dance between steel and silicon.
 
-And further still — in the fields of Myanmar, in the rice paddies of Cambodia, in the villages of Laos — the soil speaks more strongly than the server. Here, the work of hands still outweighs the work of minds, though smartphones in pockets whisper of another world.
+And further still — in the fields of Myanmar, in the rice paddies of Cambodia, in the villages of Laos — the soil speaks more strongly than the server, though smartphones in pockets whisper of another world.
 
-Indonesia, Vietnam, the Philippines — these are the crossroads.
-Factories roar, ships carry minerals and textiles, but alongside, young hands type codes, build apps, send their voices into the cloud. They are not yet post-industrial, but their steps lean toward it, half-rooted in earth, half-reaching to sky.
+Indonesia, Vietnam, the Philippines — these are the crossroads. Factories roar, ships carry minerals and textiles, but alongside, young hands type codes, build apps, send their voices into the cloud. They are not yet post-industrial, but their steps lean toward it, half-rooted in earth, half-reaching to sky.
 
-Thus, ASEAN is not yet post-industrial society in the singular sense that Daniel Bell imagined.
-It is instead a garden where timelines bloom unevenly: some flowers already unfolding into the era of information, others still ripening in the sun of industry.
+Thus, ASEAN is not yet post-industrial society in the singular sense that Daniel Bell imagined. It is instead a garden where timelines bloom unevenly: some flowers already unfolding into the era of information, others still ripening in the sun of industry.
 
 Perhaps this is its strength — that ASEAN holds many seasons at once, never wholly bound to one age, always carrying the echo of what has been, and the fragrance of what is yet to come.
 
