--- a/about.qmd
+++ b/about.qmd
@@ -15,5 +15,4 @@ about:
       href: https://github.com/bangtedy
 ---
 
-Kombinasi kondisi yang bersama-sama menghasilkan suatu hasil. Pengaruh suatu kondisi tertentu terhadap hasil tidak pernah pasti, karena bergantung pada kondisi lain yang terjadi bersamaan pada saat itu.
-
+Kombinasi kondisi yang bersama-sama menghasilkan suatu hasil. Pengaruh suatu kondisi tertentu terhadap hasil tidak pernah pasti, karena bergantung pada kondisi lain yang terjadi bersamaan pada saat itu. Konfigurasi.
